# can-c-codegen-rs

./: .gitignore  2  Cargo.toml  test.yaml
examples/: simple.c  simple.h  simple.rs  yaml_config.rs
linux/: can_frame.h  rx_queue.c  rx_queue.h
scheduler/: a.out  main.c
src/: can_frame.rs  can_module_hooks.rs  command_hooks.rs  extern_c_guard.rs  file_buffer.rs  includes.rs  lib.rs  messages.rs  object_entries.rs  options.rs  pil.rs  poll.rs  rx_handlers.rs  rx_queue.rs  scheduler.rs  setters.rs  setup.rs  source_block.rs  types.rs  update.rs
testing/: CMakeLists.txt  test.yaml
testing/.cache/clangd/index/: can_adapter.c.6D52974FFAFF4DB1.idx  main.cpp.9D604B1BD6BEDFAA.idx  mock_can.c.EF96FA1144570996.idx
testing/master/: CMakeLists.txt
testing/master/src/: master.c
testing/mock_can/: CMakeLists.txt
testing/mock_can/.cache/clangd/index/: lib.c.866C4D664F6B5412.idx
testing/mock_can/src/: can_adapter.h
testing/secu/: CMakeLists.txt
testing/secu/src/: secu.c
testing/src/: heap.h  main.c  main.cpp  mutex.h  queue.h  signal.h  test.c  test.h  thread.h  time.h
testing/test1/: CMakeLists.txt  main.cpp  test.yaml
testing/testing_cli/: Cargo.toml
testing/testing_cli/src/: main.rs
testing/utility/: CMakeLists.txt
testing/utility/src/: mutex.h  thread.h  time_util.h
