[package]
name = "testing_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
can-yaml-config-rs = { git = "https://github.com/mu-zero-HYPERLOOP/can-yaml-config-rs.git" }
can-cpp-codegen-rs = { path = "../../" }
clap = { version = "4.4.13", features=["derive"]}
